# lossless-scaling-vk

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  VkLayer_LS_lossless_scaling.json
include/: nis_shader.h
include/upscalers/: nis.h  sgsr.h  sgsr_convert_shader.h  sgsr_upscale_shader.h
shaders/: nis_main.comp  sgsr_upscale.comp
src/: lossless_scaling.cpp  lossless_scaling.h
src/upscalers/: nis.cpp  sgsr.cpp
